--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@ html, body,.container-fluid {
 
 }
 
+.contain{
+    width: 1500px;
+}
+
 /*Add custom cursor so it auto inherits font styles*/
 #typed::after {
     color:black;
@@ -71,10 +75,10 @@ html, body,.container-fluid {
 
 .intro{
     position: relative;
-    background-image: url("../img/intro2.jpg");
+    background-size: 100% 100%;
+    background-image: url("../img/bg1.jpg");
     height: 100%;
     background-repeat: no-repeat;
-    background-size: cover;
     overflow: hidden;
 }
 
@@ -159,13 +163,15 @@ html, body,.container-fluid {
     background: #2b2b2b;
     padding-top: 100px;
     padding-bottom: 100px;
+    display: flex;
+    justify-content: center;
+
 }
 .about-me-image{
     display: flex;
     align-items: center;
     justify-content: center;
     vertical-align: middle;
-
 }
 
 .about-me-image img{
@@ -285,6 +291,8 @@ a { color: white; }
     background-color:whitesmoke;
     padding-top: 100px;
     padding-bottom: 100px;
+    display: flex;
+    justify-content: center;
 }
 
 .skills-title{
@@ -339,6 +347,8 @@ a { color: white; }
     padding-bottom: 100px;
     /* border: solid black; */
     margin: auto;
+    display: flex;
+    justify-content: center;
 
 }
 
@@ -394,6 +404,10 @@ a { color: white; }
     width: 100%;
 }
 
+.projects-content img{
+    height: 250px;
+}
+
 .project{
     padding:0;
     padding-bottom: 10px;
@@ -437,6 +451,8 @@ a { color: white; }
     /* background-color: rgba(0,0,0, 0.4); */
 
 .contact{
+    display: flex;
+    justify-content: center;
     min-height: 400px;
     background-color: #2b2b2b;
     padding-top: 50px;
