--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,53 @@ html, body,.container-fluid {
     margin:0;
     padding:0;
 }
+
+/* Loader */
+.loader-wrapper{
+    width:100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:black;
+}
+
+.loader{
+    width:50px;
+    height:50px;
+    display:inline-block;
+    padding:0px;
+    text-align:left;
+ }
+.loader span {
+    position:absolute;
+    display:inline-block;
+    width:50px;
+    height:50px;
+    border-radius:100%;
+    /* background:rgba(135, 211, 124,1); */
+    background: chartreuse;
+    -webkit-animation:loader 1.5s linear infinite;
+    animation:loader 1.5s linear infinite;
+ } 
+.loader span:last-child {
+    animation-delay:-0.9s;
+    -webkit-animation-delay:-0.9s;
+ }
+ @keyframes loader {
+    0% {transform: scale(0, 0);opacity:0.8;}
+    100% {transform: scale(1, 1);opacity:0;}
+ }
+ @-webkit-keyframes loader {
+    0% {-webkit-transform: scale(0, 0);opacity:0.8;}
+    100% {-webkit-transform: scale(1, 1);opacity:0;}
+}
+
+
+ 
 /* Introduction */
 #typed {
     display: inline;
